--- a/templates/index.html
+++ b/templates/index.html
@@ -10,5 +10,9 @@
         <input type="text" id="ssid" name="ssid" required>
         <input type="submit" value="Start Flooding">
     </form>
+    <br>
+    <form action="/stop_flooding" method="POST">
+        <input type="submit" value="Stop Flooding">
+    </form>
 </body>
 </html>
